<resources>
    <string name="app_name">FitApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_goal">Your Goal:</string>
    <string name="current">Current:</string>


    <string name="channel_name">Fit App</string>
    <string name="channel_description">Fitness Tracking App</string>

    <!-- Button Strings -->
    <string name="action">Action</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="back">Back Button</string>


    <!-- BMI -->
    <string name="bmi">BMI</string>
    <string name="bmi_extended">Body Mass Index</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="metric">Metric</string>
    <string name="retarded">Imperial</string>
    <string name="super_underweight">Very Underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal_weight">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese1">Obese Type 1</string>
    <string name="obese2">Obese Type 2</string>
    <string name="obese3">Obese Type 3</string>


    <!-- WATER -->
    <string name="water">Water</string>
    <string name="water_extended">Daily Water Consumption</string>
    <string name="registrar">Register</string>

    <!-- STEPS -->
    <string name="steps">Steps</string>
    <!-- CALORIES -->
    <string name="calories">Calories</string>

    <!-- Metric Units -->
    <string name="metric_weight">kg</string>
    <string name="metric_height">cm</string>
    <!-- Retarded Units -->
    <string name="retarded_weight">lb</string>
    <string name="retarded_height">in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">RegistrationActivity</string>

    <!-- Nutritional Advice -->
    <string name="nutritional_advice_title">Nutritional Advice</string>
    <string name="nutritional_advice_btn">Nutrition</string>
    <string name="decrease_weight">Decrease Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="increase_weight">Gain Weight</string>
    <string name="advice_detail_title">Advice to </string>

    <!-- Badges -->
    <string name="badge_title_steps">Steps</string>
    <string name="badge_title_calories">Calories</string>
    <string name="question_mark">\?</string>
    <string name="star_mark1">\u2605</string>
    <string name="star_mark2">\u2605\u2605</string>
    <string name="star_mark3">\u2605\n\u2605\u2605</string>
    <string name="star_mark4">\u2605\u2605\n\u2605\u2605</string>

    <!-- TEMP -->
    <string name="binding">Binding</string>
    <string name="goals">Loading</string>
    <string name="goal">Goal</string>
    <string name="my_rewards">My Rewards</string>
    <string name="nutrition">Nutrition</string>
    <string name="exercises">Exercises</string>
    <string name="exericises_lower">exercises</string>

    <string name="add_water">Add Water</string>
    <string name="update_goal">Update Goal</string>

    <string name="water_quantity">Water Quantity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="loremParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum faucibus orci nec pulvinar. Nulla facilisi. Suspendisse sed mattis metus. Nullam sit amet dui varius, ullamcorper nisi eget, aliquet nulla. Curabitur mattis nibh id ex ultricies, a elementum purus feugiat. Duis nec lacus dolor. Quisque euismod felis non arcu efficitur, suscipit tristique tellus rutrum. Curabitur lacinia quis massa non vulputate. Maecenas bibendum, est quis imperdiet rhoncus, urna enim vestibulum purus, non dapibus massa dui vitae nunc. Sed hendrerit quam justo, quis dictum ante euismod quis.</string>
    <string name="exercise_description">This is a test description</string>


    <string name="product_sku">SKU</string>
    <string name="product_name">Name</string>
    <string name="product_calories">Calories</string>
    <string name="product_portion">Portion</string>
    <string name="product_nutritional_fact">Nutritional Fact</string>


</resources>
