<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NutriAdviceMainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerConstraintH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerConstraintV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <Button
        android:id="@+id/btnMantainWeight"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wide"
        android:layout_marginEnd="@dimen/wide"
        android:onClick="goToDetail"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/maintain_weight"
        android:textSize="@dimen/fontMedium"
        app:layout_constraintBottom_toTopOf="@+id/bottomConstraint"
        app:layout_constraintEnd_toStartOf="@+id/rightConstraint"
        app:layout_constraintStart_toStartOf="@+id/leftConstraint"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnLoseWeight"
        style="@style/SuccessButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wide"
        android:layout_marginTop="@dimen/normal"
        android:layout_marginEnd="@dimen/wide"
        android:onClick="goToDetail"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/decrease_weight"
        android:textSize="@dimen/fontMedium"
        app:layout_constraintEnd_toStartOf="@+id/rightConstraint"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/leftConstraint"
        app:layout_constraintTop_toBottomOf="@+id/btnMantainWeight" />

    <Button
        android:id="@+id/btnGainWeight"
        style="@style/CancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wide"
        android:layout_marginEnd="@dimen/wide"
        android:layout_marginBottom="@dimen/normal"
        android:onClick="goToDetail"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/increase_weight"
        android:textSize="@dimen/fontMedium"
        app:layout_constraintBottom_toTopOf="@+id/btnMantainWeight"
        app:layout_constraintEnd_toStartOf="@+id/rightConstraint"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftConstraint" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/nutritional_advice_title"
        android:textSize="@dimen/fontBig"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toStartOf="@+id/rightConstraint"
        app:layout_constraintStart_toStartOf="@+id/leftConstraint"
        app:layout_constraintTop_toTopOf="@+id/topConstraint" />

    <ImageButton
        android:id="@+id/btnBack"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="@+id/leftConstraint"
        app:layout_constraintTop_toTopOf="@+id/topConstraint"
        app:srcCompat="?attr/homeAsUpIndicator" />
</androidx.constraintlayout.widget.ConstraintLayout>