<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="16dp"
    tools:context=".BMIActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <SeekBar
        android:id="@+id/sliderWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottom10"
        app:layout_constraintEnd_toStartOf="@+id/right10"
        app:layout_constraintStart_toStartOf="@+id/left10" />

    <TextView
        android:id="@+id/lblWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/tight"
        android:ems="10"
        android:text="@string/weight"
        android:textSize="@dimen/fontMedium"
        app:layout_constraintBottom_toTopOf="@+id/sliderWeight"
        app:layout_constraintEnd_toStartOf="@+id/right10"
        app:layout_constraintStart_toStartOf="@+id/left10" />

    <SeekBar
        android:id="@+id/sliderHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal"
        app:layout_constraintBottom_toTopOf="@+id/lblWeight"
        app:layout_constraintEnd_toStartOf="@+id/right10"
        app:layout_constraintStart_toStartOf="@+id/left10" />

    <TextView
        android:id="@+id/lblHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/tight"
        android:ems="10"
        android:text="@string/height"
        android:textSize="@dimen/fontMedium"
        app:layout_constraintBottom_toTopOf="@+id/sliderHeight"
        app:layout_constraintEnd_toStartOf="@+id/right10"
        app:layout_constraintStart_toStartOf="@+id/left10" />

    <TextView
        android:id="@+id/lblBMI"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginTop="@dimen/normal"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:gravity="center"
        android:text="@string/bmi"
        android:textColor="@color/colorPrimary"
        android:textSize="56sp"
        app:layout_constraintEnd_toStartOf="@+id/right10"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/left10"
        app:layout_constraintTop_toBottomOf="@+id/titleBMI" />

    <TextView
        android:id="@+id/titleBMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/bmi_extended"
        android:textAlignment="center"
        android:textSize="@dimen/fontBig"
        app:layout_constraintEnd_toStartOf="@+id/right10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/left10"
        app:layout_constraintTop_toTopOf="@+id/top10" />

    <ProgressBar
        android:id="@+id/circleProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:indeterminate="false"
        android:progress="75"
        android:progressDrawable="@drawable/fit_seekbar"
        android:secondaryProgress="0"
        app:layout_constraintBottom_toBottomOf="@+id/lblBMI"
        app:layout_constraintEnd_toStartOf="@+id/right10"
        app:layout_constraintStart_toStartOf="@+id/lblBMI"
        app:layout_constraintTop_toTopOf="@+id/lblBMI" />

    <TextView
        android:id="@+id/lblBMIResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="32dp"
        android:text="@string/normal_weight"
        android:textColor="@color/orange"
        android:textSize="@dimen/fontMedium"
        app:layout_constraintBottom_toBottomOf="@+id/lblBMI"
        app:layout_constraintEnd_toStartOf="@+id/right10"
        app:layout_constraintStart_toStartOf="@+id/left10"
        app:layout_constraintTop_toTopOf="@+id/lblBMI" />

</androidx.constraintlayout.widget.ConstraintLayout>